--- a/index.html
+++ b/index.html
@@ -51,24 +51,24 @@
     <section id="intro" class="white-bg section">
         <div class="main-content top3-content">
            <h2>Um pouco mais sobre mim...</h2>
-           <p>
+           <p class="text-white-bg">
             Atualmente, tenho 17 anos e busco adquirir experiência e pratica em tecnologia da informação e desenvolvimento de software
             contribuindo para a melhoria de processos e projetos, além de aperfeiçoar habilidades técnicas e de comunicação
            </p> 
-           <p>
+           <p class="text-white-bg">
             Entrei para o ramo da programação em 2021, juntamente com o inicio do ensino médio, sempre fui um amante de tecnologia e meu pai tambem trabalha na área, o 
             que me inspirou e inspira até hoje.
            </p>
-           <p>
+           <p class="text-white-bg">
             Tenho conhecimento aprofundado na utilização do sistema operacional Windows e seus aplicativos nativos, além de conhecimento basíco com ferramentas de desing,
              como PhotoShop e Figma.
             </p>
-            <p>
+            <p class="text-white-bg">
             No curso técnico, tenho conhecimento no desenvolvimento de sistemas com Delphi 10, atráves da linguagem Pascal, e utilização do banco de dados MySQL além de Programação Orientada a Objetos com Java,
             uso de feramentas para testagem de Softwares e WebSites, modelagem de sistemas e uso de metodologias ágeis, como Jira Software
             </p>
-            <p>
-            Na programação web, tenho conhecimentos avançados em HTML5 e CSS3, 
+            <p class="text-white-bg">
+            Na programação web, tenho conhecimentos avançados em HTML5 e CSS3, e estou obtendo conhecimento sobre a linguagem de programação JavaScript e suas tecnologias 
             </p>
         </div>
     </section>
@@ -76,7 +76,7 @@
     <section id="grid-one" class="grid-one main-bg section">
         <div class="main-content grid-one-content">
         <h2 class="grid-main-heading">Meus Projetos!</h2>
-        <p class="grid-description">Uma breve descrição sobre meus projetos...</p>
+        <p class="wgrid-description">Uma breve descrição sobre meus projetos...</p>
         <div class="grid">
         <article>
         <h3><a href="https://github.com/ArthurTeixeiraS/Tui-doList1.2" target="_blank">To-Do List</a></h3>
@@ -89,12 +89,10 @@
         <p>Uma pagina web onde o usuário digitará três números, um representando o início da contagem, outro o final e o último número representando o intervalo entre cada número contado </p>
         </article>
         <article>
-            <h3>Test 3</h3>
-        <p> dolorum sunt dignissimos nulla perferendis. 
-            Dignissimos nisi, aspernatur
-            cupiditate quae tempora repellat fuga laboriosam possimus 
-            qui sint. Elit sit dolor ipsum
-            Lorem.</p>
+            <h3><a href="https://github.com/ArthurTeixeiraS/Analista-de-Numeros-JS" target="_blank"></a>Analista de Números</h3>
+        <p> Página web, onde o usuário digitará quantos números quiser de 1 a 100, e quando Finalizar, alguns dados como a quantidade de números digitados, o
+            maior e menor valor, a soma dos valores e a média dos valores adicionados. Tudo isso realizado atráves da manipulação de Vetores com JavaScript
+        </p>
         </article>
         </div>
     </div>
@@ -102,49 +100,57 @@
 
     <section id="gallery" class="grid-one white-bg section">
         <div class="main-content grid-one-content">
-        <h2 class="grid-main-heading">Gallery</h2>
-        <p class="grid-description">Uma breve descrição.</p>
+        <h2 class="grid-main-heading">Galeria</h2>
+        <p class="grid-description">Algumas imagens relacionadas ao meu projeto</p>
         <div class="grid">
             <div class="gallery-img">
-                <img src="https://source.unsplash.com/random/360x360?r=1" alt="imagem randomica do unsplash">
+                <img src="../assets/img/Screenshot_1.png" alt="Tui-doList preview">
             </div>
             <div class="gallery-img">
-                <img src="https://source.unsplash.com/random/360x360?r=2" alt="imagem randomica do unsplash">
+                <img src="../assets/img/Screenshot_2.png" alt="Analista de números preview">
             </div>
             <div class="gallery-img">
-                <img src="https://source.unsplash.com/random/360x360?r=3" alt="imagem randomica do unsplash">
+                <img src="../assets/img/Screenshot_4.png" alt="Vamos Contar Preview">
             </div>
             <div class="gallery-img">
-                <img src="https://source.unsplash.com/random/360x360?r=4" alt="imagem randomica do unsplash">
+                <img src="../assets/img/Screenshot_5.png" alt="Landing Page project">
             </div>
             <div class="gallery-img">
-                <img src="https://source.unsplash.com/random/360x360?r=5" alt="imagem randomica do unsplash">
+                <img src="../assets/img/Screenshot_6.png" alt="Calculadora IMC JavaScript">
             </div>
             <div class="gallery-img">
-                <img src="https://source.unsplash.com/random/360x360?r=6" alt="imagem randomica do unsplash">
+                <img src="../assets/img/Screenshot_3.png" alt="imagem randomica do unsplash">
             </div>
             <div class="gallery-img">
-                <img src="https://source.unsplash.com/random/360x360?r=7" alt="imagem randomica do unsplash">
+                <img src="../assets/img/Screenshot_7.png" alt="imagem randomica do unsplash">
             </div>
 
     </div>
     </section>
     <section id="grid-two" class="grid-one main-bg section">
         <div class="main-content grid-one-content">
-        <h2 class="grid-main-heading">Recent Jobs</h2>
-        <p class="grid-description">Trabalhos recentes.</p>
+        <h2 class="grid-main-heading">Minhas Soft-Skills</h2>
+        <p class="grid-description">Me orgulho dessas</p>
         <div class="grid">
         <article>
-        <h3>To-do List</h3>
-        <p>A to-do list made with HTML5, CSS3 and JavaScript, having a local storage system, which saves user data in the browser itself</p>
+        <h3>Inteligência Emocional</h3>
+        <p>Capacidade de lidar bem com minhas emoções, e usar a energia que elas me proveem para desempenhar melhor minhas tarefas</p>
         </article>
         <article>
-            <h3>Step counter</h3>
-        <p>A step counter made in HTML5, CSS3 and JavaScript, which has the possibility to choose the start and end of the count, and the interval between the displayed numbers</p>
+            <h3>Vontade de Aprender</h3>
+        <p>Sou alguém inspirado, que quando tem interesse em algum conteúdo se esforça ao máximo para aprender e dominar de forma eficiênte o mesmo</p>
         </article>
         <article>
-            <h3>Number Analyst</h3>
-        <p> A project in HTML5, CSS3 and JavaScript that stores the numbers entered by the user and makes comparisons between them, such as: "Which is the biggest number" or "What is the average of all the numbers added together", etc.</p>
+            <h3>Flexibilidade e Resiliência</h3>
+        <p>Relacionada a minha capacidade de me adaptar e continuar produzindo diante de situações complexas, e no final tirar uma lição com tudo</p>
+        </article>
+        <article>
+            <h3>Empatia</h3>
+        <p>Relacionado a facilidade de se colocar no lugar do outro, e entender diversas abordagens sobre um determinado assunto</p>
+        </article>
+        <article>
+            <h3>Pensamento Crítico</h3>
+        <p>Tenho capacidade de questionar métodos, identificar problemas, buscar novas soluções e rever processos, com sabedoria</p>
         </article>
         </div>
     </div>
@@ -153,10 +159,10 @@
     <section id="pricing" class="white-bg section">
         <div class="main-content top3-content">
             <h2>Pricing</h2>
-            <p>The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some
+            <p class="text-white-bg">The release of Apple Silicon-based Macs at the end of last year generated a flurry of news coverage and some
                 surprises at the machine’s performance. This post details some background information on the experience of
                 porting Firefox to run natively on these CPUs.</p>
-              <p>We’ll start with some background on the Mac transition and give an overview of Firefox internals that needed to
+              <p class="text-white-bg">We’ll start with some background on the Mac transition and give an overview of Firefox internals that needed to
                 know about the new architecture, before moving on to the concept of Universal Binaries.</p>
                 <div class="responsive-table">
                 <table>
