--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
     <footer id="footer" class="footer white-bg">
         <p>Feito com <span class="heart">❤</span> por <a rel="nofollow" target="_blank" href="https://www.instagram.com/arthurtx_/">Arthur</a> </p>
     </footer>
-    <a class="back-to-top" href="#home">⮙</a>
+    <a class="back-to-top" href="#home">🠝</a>
 </body>
 
 </html>
