--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 <ul onclick="getElementById('close-menu').checked=false;">
                     <li><a href="#intro">Sobre Mim</a></li>
                     <li><a href="#grid-one">Meu Trabalho</a></li>
-                    <li><a href="#gallery">Gallery</a></li>
-                    <li><a href="#grid-two">My Work</a></li>
-                    <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#gallery">Galeria</a></li>
+                    <li><a href="#grid-two">Soft-Skills</a></li>
+                    <li><a href="#pricing">Social Media</a></li>
+                    <li><a href="#contact">Mensagem</a></li>
                 </ul>
             </nav>
         </div>
@@ -171,51 +171,33 @@
     
     <section id="pricing" class="white-bg section">
         <div class="main-content top3-content">
-            <h2>Minhas Stacks</h2>
-                <div class="responsive-table">
-                <!-- <table>
-                    <caption>Pricing Table</caption>
-                    <thead>
-                        <th>Title 1</th>
-                        <th>Title 2</th>
-                        <th>Title 3</th>
-                        <th>Title 4</th>
-                        <th>Title 5</th>
-                    </thead>
-                    <TBOdy>
-                        <tr>
-                            <td>Content 1</td>
-                            <td>Content 2</td>
-                            <td>Content 3</td>
-                            <td>Content 4</td>
-                            <td>Content 5</td>
-                        </tr>
-                        <tr>
-                            <td>Content 1</td>
-                            <td>Content 2</td>
-                            <td>Content 3</td>
-                            <td>Content 4</td>
-                            <td>Content 5</td>
-                        </tr>
-                        <tr>
-                            <td>Content 1</td>
-                            <td>Content 2</td>
-                            <td>Content 3</td>
-                            <td>Content 4</td>
-                            <td>Content 5</td>
-                        </tr>
-                    </TBOdy>
-                    <tfoot>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td>Testing</td>
-                        </tr>
-                    </tfoot>
-                </table> -->
-        
+            <h2>Entre em contato!</h2>
+            <div class="grid-contact">
+                <article>
+                    <a href="https://www.instagram.com/arthurtx_/" target="_blank">
+                        <img class="contact-icon" src="..\assets\img\icons8-instagram-480.svg" alt=""> 
+                    </a>
+                </article>       
+                <article>
+                    <a href="https://www.linkedin.com/in/arthur-teixeira-serafim-1b87b1254/" target="_blank">
+                        <img class="contact-icon" src="..\assets\img\icons8-linkedin.svg" alt=""> 
+                    </a>
+                </article>       
+                <article>
+                    <a href="https://github.com/ArthurTeixeiraS" target="_blank">
+                        <img class="contact-icon" src="..\assets\img\icons8-github.svg" alt=""> 
+                    </a>
+                </article>       
+                <article>
+                    <a href="https://wa.me/+5548998618074" target="_blank">
+                        <img class="contact-icon" src="..\assets\img\icons8-whatsapp.svg" alt=""> 
+                    </a>
+                </article>       
+                <article>
+                    <a href="#contact">
+                        <img class="contact-icon" src="..\assets\img\icons8-gmail-480.png" alt=""> 
+                    </a>
+                </article>       
             </div>
         </div>
     </section>
@@ -223,12 +205,7 @@
         <div class="main-content intro-content">
             <div class="intro-text-content">
                 <h2>January brings us Firefox 85</h2>
-                <p>To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are
-                    bringing
-                    you
-                    support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal
-                    of
-                    Flash support from Firefox.</p>
+                <p></p>
             </div>
             <div class="intro-img">
                 <img src="assets/img/javascript-not-optimized.svg" alt="desenho de pessoas segurando as logos das linguagens web">
