--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
     </section>
     
     <section id="pricing" class="white-bg section">
-        <div class="main-content top3-content">
-            <h2>Entre em contato!</h2>
+        <div class="main-content top3-content ">
+            <h2 class="title-content">Entre em contato!</h2>
             <div class="grid-contact">
                 <article>
                     <a href="https://www.instagram.com/arthurtx_/" target="_blank">
@@ -202,39 +202,38 @@
         </div>
     </section>
     <section id="contact" class="intro main-bg section">
-        <div class="main-content intro-content">
+        <div class="main-content intro-content ">
             <div class="intro-text-content">
-                <h2>January brings us Firefox 85</h2>
-                <p></p>
+                <h2 class="msg-title">Mande uma mensagem!</h2>
             </div>
-            <div class="intro-img">
+            <div class="intro-img msg-img">
                 <img src="assets/img/javascript-not-optimized.svg" alt="desenho de pessoas segurando as logos das linguagens web">
             </div>
             <div class="contact-form">
                 <fieldset class="form-grid">
-                    <legend>Contact Me</legend>
+                    <legend>Mande uma mensagem para mim</legend>
                     <div class="form-group">
-                        <label for="first-name">First Name</label>
-                        <input type="text" name="first-name" id="first-name" placeholder="Your name">
+                        <label for="first-name">Seu nome:</label>
+                        <input type="text" name="first-name" id="first-name" placeholder="Seu nome">
                     </div>
 
                     <div class="form-group">
-                        <label for="last-name">Last Name</label>
-                        <input type="text" name="last-name" id="last-name" placeholder="Your lastname">
+                        <label for="last-name">Sobrenome:</label>
+                        <input type="text" name="last-name" id="last-name" placeholder="Seu sobrenome">
                     </div>
 
                     <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="text" name="email" id="email" placeholder="Your email">
+                        <label for="email">Email:</label>
+                        <input type="email" name="email" id="email" placeholder="Seu email">
                     </div>
 
                     <div class="form-group full-width">
-                        <label for="message">Message</label>
-                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message"></textarea>
+                        <label for="message">Mensagem:</label>
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
                     </div>
 
                     <div class="form-group full-width">
-                        <button type="submit">Send Message</button>
+                        <button type="submit">Enviar Mensagem</button>
                     </div>
 
                     
