--- a/index.html
+++ b/index.html
@@ -214,22 +214,22 @@
                     <legend>Mande uma mensagem para mim</legend>
                     <div class="form-group">
                         <label for="first-name">Seu nome:</label>
-                        <input type="text" name="first-name" id="first-name" placeholder="Seu nome">
+                        <input class="input-msg" type="text" name="first-name" id="first-name" placeholder="Seu nome">
                     </div>
 
                     <div class="form-group">
                         <label for="last-name">Sobrenome:</label>
-                        <input type="text" name="last-name" id="last-name" placeholder="Seu sobrenome">
+                        <input class="input-msg" type="text" name="last-name" id="last-name" placeholder="Seu sobrenome">
                     </div>
 
                     <div class="form-group">
                         <label for="email">Email:</label>
-                        <input type="email" name="email" id="email" placeholder="Seu email">
+                        <input class="input-msg" type="email" name="email" id="email" placeholder="Seu email">
                     </div>
 
                     <div class="form-group full-width">
                         <label for="message">Mensagem:</label>
-                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+                        <textarea class="input-msg" name="message" id="message" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
                     </div>
 
                     <div class="form-group full-width">
