--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;1,400;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-
+    <script src="assets/js/app.js" defer></script>
 </head>
 
 <body>
@@ -210,34 +210,37 @@
                 <img src="assets/img/javascript-not-optimized.svg" alt="desenho de pessoas segurando as logos das linguagens web">
             </div>
             <div class="contact-form">
+
+                <form action="https://formsubmit.co/arthurteixeiraserafim@gmail.com" method="POST" data-form>
                 <fieldset class="form-grid">
                     <legend>Mande uma mensagem para mim</legend>
                     <div class="form-group">
                         <label for="first-name">Seu nome:</label>
-                        <input class="input-msg" type="text" name="first-name" id="first-name" placeholder="Seu nome">
+                        <input class="input-msg" type="text" name="first-name" id="first-name" placeholder="Seu nome" required>
                     </div>
 
                     <div class="form-group">
                         <label for="last-name">Sobrenome:</label>
-                        <input class="input-msg" type="text" name="last-name" id="last-name" placeholder="Seu sobrenome">
+                        <input class="input-msg" type="text" name="last-name" id="last-name" placeholder="Seu sobrenome" required>
                     </div>
 
                     <div class="form-group">
                         <label for="email">Email:</label>
-                        <input class="input-msg" type="email" name="email" id="email" placeholder="Seu email">
+                        <input class="input-msg" type="email" name="email" id="email" placeholder="Seu email" required>
                     </div>
 
                     <div class="form-group full-width">
                         <label for="message">Mensagem:</label>
-                        <textarea class="input-msg" name="message" id="message" cols="30" rows="10" placeholder="Sua mensagem"></textarea>
+                        <textarea class="input-msg" name="message" id="message" cols="30" rows="10" placeholder="Sua mensagem" required></textarea>
                     </div>
 
                     <div class="form-group full-width">
-                        <button type="submit">Enviar Mensagem</button>
+                        <button type="submit" onclick="window.location.href='assets/html/thanks.html'" data-button>Enviar Mensagem</button>
                     </div>
 
                     
                 </fieldset>
+            </form>
         </div>
     </section>
     <footer id="footer" class="footer white-bg">
