--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p>Uma pagina web onde o usuário digitará três números, um representando o início da contagem, outro o final e o último número representando o intervalo entre cada número contado </p>
         </article>
         <article>
-            <h3><a href="https://github.com/ArthurTeixeiraS/Analista-de-Numeros-JS" target="_blank"></a>Analista de Números</h3>
+            <h3><a href="https://github.com/ArthurTeixeiraS/Analista-de-Numeros-JS" target="_blank">Analista de Números</a></h3>
         <p> Página web, onde o usuário digitará quantos números quiser de 1 a 100, e quando Finalizar, alguns dados como a quantidade de números digitados, o
             maior e menor valor, a soma dos valores e a média dos valores adicionados. Tudo isso realizado atráves da manipulação de Vetores com JavaScript
         </p>
