--- a/index.html
+++ b/index.html
@@ -65,23 +65,23 @@
         <div class="main-content top3-content">
            <h2>Um pouco mais sobre mim...</h2>
            <p class="text-white-bg">
-            Atualmente, tenho 17 anos e busco adquirir experiência e pratica em tecnologia da informação e desenvolvimento de software
-            contribuindo para a melhoria de processos e projetos, além de aperfeiçoar habilidades técnicas e de comunicação
+            Atualmente, tenho 17 anos e busco adquirir experiência e prática em tecnologia da informação e desenvolvimento de "software"
+            contribuindo para a melhoria de processos e projetos, além de aperfeiçoar habilidades técnicas e de comunicação.
            </p> 
            <p class="text-white-bg">
-            Entrei para o ramo da programação em 2021, juntamente com o inicio do ensino médio, sempre fui um amante de tecnologia e meu pai tambem trabalha na área, o 
+            Entrei para o ramo da programação em 2021, com o início do ensino médio, sempre fui um amante de tecnologia e meu pai também trabalha na área, o 
             que me inspirou e inspira até hoje.
            </p>
            <p class="text-white-bg">
-            Tenho conhecimento aprofundado na utilização do sistema operacional Windows e seus aplicativos nativos, além de conhecimento basíco com ferramentas de desing,
-             como PhotoShop e Figma.
+            Tenho conhecimento aprofundado na utilização do sistema operacional "Windows" e seus aplicativos nativos, além de conhecimento básico com ferramentas de design,
+             como "Photoshop" e "Figma".
             </p>
             <p class="text-white-bg">
-            No curso técnico, tenho conhecimento no desenvolvimento de sistemas com Delphi 10, atráves da linguagem Pascal, e utilização do banco de dados MySQL além de Programação Orientada a Objetos com Java,
-            uso de feramentas para testagem de Softwares e WebSites, modelagem de sistemas e uso de metodologias ágeis, como Jira Software
+            No curso técnico, tenho conhecimento no desenvolvimento de sistemas com Delphi 10, através da linguagem "Pascal", e utilização do banco de dados "MySQL" além de Programação Orientada a Objetos com Java,
+            uso de ferramentas para testagem de "Softwares" e "WebSites", modelagem de sistemas e uso de metodologias ágeis, como "Jira Software"
             </p>
             <p class="text-white-bg">
-            Na programação web, tenho conhecimentos avançados em HTML5 e CSS3, e estou obtendo conhecimento sobre a linguagem de programação JavaScript e suas tecnologias 
+            Na programação "web", tenho conhecimentos avançados em HTML5 e CSS3, e estou obtendo conhecimento sobre a linguagem de programação JavaScript e suas tecnologias.
             </p>
         </div>
     </section>
@@ -93,18 +93,18 @@
         <div class="grid">
         <article>
         <h3><a href="https://github.com/ArthurTeixeiraS/Tui-doList1.2" target="_blank">To-Do List</a></h3>
-        <p>Uma página web que funciona como uma lista de tarefas, onde você pode anotar suas tarefas e marca-las como concluidas! O destaque desse projeto é o
-            LocalStorage, que permite com que o usuário não perca suas tarefas ao fechar a guia, ou até mesmo o navegador
+        <p>Uma página "web" que funciona como uma lista de tarefas, onde você pode anotar suas tarefas e marca-las como concluídas! O destaque desse projeto é o
+            LocalStorage, que permite com que o usuário não perca suas tarefas ao fechar a guia, ou até mesmo o navegador.
         </p>
         </article>
         <article>
             <h3><a href="https://github.com/ArthurTeixeiraS/Contador-com-passos-em-JS" target="_blank">Contador com Passos</a></h3>
-        <p>Uma pagina web onde o usuário digitará três números, um representando o início da contagem, outro o final e o último número representando o intervalo entre cada número contado </p>
+        <p>Uma pagina "web" onde o usuário digitará três números, um representando o início da contagem, outro o final e o último número representando o intervalo entre cada número contado.</p>
         </article>
         <article>
             <h3><a href="https://github.com/ArthurTeixeiraS/Analista-de-Numeros-JS" target="_blank">Analista de Números</a></h3>
         <p> Página web, onde o usuário digitará quantos números quiser de 1 a 100, e quando Finalizar, alguns dados como a quantidade de números digitados, o
-            maior e menor valor, a soma dos valores e a média dos valores adicionados. Tudo isso realizado atráves da manipulação de Vetores com JavaScript
+            maior e menor valor, a soma dos valores e a média dos valores adicionados. Tudo isso realizado através da manipulação de Vetores com JavaScript.
         </p>
         </article>
         </div>
@@ -114,7 +114,7 @@
     <section id="gallery" class="grid-one white-bg section">
         <div class="main-content grid-one-content">
         <h2 class="grid-main-heading">Galeria</h2>
-        <p class="grid-description">Algumas imagens relacionadas ao meu projeto</p>
+        <p class="grid-description">Algumas imagens relacionadas aos meus projetos</p>
         <div class="grid">
             <div class="gallery-img">
                 <img src="../assets/img/Screenshot_1.png" alt="Tui-doList preview">
@@ -147,23 +147,23 @@
         <div class="grid">
         <article>
         <h3>Inteligência Emocional</h3>
-        <p>Capacidade de lidar bem com minhas emoções, e usar a energia que elas me proveem para desempenhar melhor minhas tarefas</p>
+        <p>Capacidade de lidar bem com minhas emoções, e usar a energia que elas me proveem para desempenhar melhor minhas tarefas.</p>
         </article>
         <article>
             <h3>Vontade de Aprender</h3>
-        <p>Sou alguém inspirado, que quando tem interesse em algum conteúdo se esforça ao máximo para aprender e dominar de forma eficiênte o mesmo</p>
+        <p>Sou alguém inspirado, que quando tem interesse em algum conteúdo se esforça ao máximo para aprender e dominar de forma eficiente o mesmo.</p>
         </article>
         <article>
             <h3>Flexibilidade e Resiliência</h3>
-        <p>Relacionada a minha capacidade de me adaptar e continuar produzindo diante de situações complexas, e no final tirar uma lição com tudo</p>
+        <p>Relacionada a minha capacidade de me adaptar e continuar produzindo diante de situações complexas, e no final tirar uma lição com tudo.</p>
         </article>
         <article>
             <h3>Empatia</h3>
-        <p>Relacionado a facilidade de se colocar no lugar do outro, e entender diversas abordagens sobre um determinado assunto</p>
+        <p>Relacionado a facilidade de se colocar no lugar do outro, e entender diversas abordagens sobre um determinado assunto.</p>
         </article>
         <article>
             <h3>Pensamento Crítico</h3>
-        <p>Tenho capacidade de questionar métodos, identificar problemas, buscar novas soluções e rever processos, com sabedoria</p>
+        <p>Tenho capacidade de questionar métodos, identificar problemas, buscar novas soluções e rever processos, com sabedoria.</p>
         </article>
         </div>
     </div>
