Atualizações para apresentação de trabalho

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;1,400;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+    <link rel="icon" href="./assets/img/2292038.png" type="image/x-icon">
     <script src="assets/js/app.js" defer></script>
 </head>
 
@@ -40,7 +41,7 @@
         <div class="main-content intro-content">
             <div class="intro-text-content">
                 <h2>Olá! Eu sou Arthur!</h2>
-                <p>Meu nome é Arthur, sou aspirante a Desenvolvedor Web, e no momento estou aprendendo sobre HTML, CSS e suas tecnologias. <br>
+                <p>Meu nome é Arthur, sou Desenvolvedor Web Full-Stack, e no momento estou aprendendo sobre HTML, CSS, JavaScript suas tecnologias. <br>
                 Estudo no Cedup Abílio Paulo, estou no 3° ano do Curso Técnico de Informática.
                 </p>
                 <div class="stacks">
@@ -98,8 +99,8 @@
         </p>
         </article>
         <article>
-            <h3><a href="https://github.com/ArthurTeixeiraS/Contador-com-passos-em-JS" target="_blank">Contador com Passos</a></h3>
-        <p>Uma pagina "web" onde o usuário digitará três números, um representando o início da contagem, outro o final e o último número representando o intervalo entre cada número contado.</p>
+            <h3><a href="https://github.com/ArthurTeixeiraS/Tu-Calc-Constructor-Function" target="_blank">Calculadora Simples</a></h3>
+        <p>Uma calculadora, feita com o Constructor, que é um método especial para criar e inicializar um objeto através de uma Classe! Pode-se somar, subtrair, multiplicar e dividir, além da possibilidade de usar parênteses para calculos mais complexos</p>
         </article>
         <article>
             <h3><a href="https://github.com/ArthurTeixeiraS/Analista-de-Numeros-JS" target="_blank">Analista de Números</a></h3>
@@ -123,7 +124,7 @@
                 <img src="../assets/img/Screenshot_2.png" alt="Analista de números preview">
             </div>
             <div class="gallery-img">
-                <img src="../assets/img/Screenshot_4.png" alt="Vamos Contar Preview">
+                <img src="../assets/img/Screenshot_25.png" alt="Calculadora Constructor Function preview">
             </div>
             <div class="gallery-img">
                 <img src="../assets/img/Screenshot_5.png" alt="Landing Page project">
