--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="main-content intro-content">
             <div class="intro-text-content">
                 <h2>Olá! Eu sou Arthur!</h2>
-                <p>Meu nome é Arthur, sou Desenvolvedor Web Full-Stack, e no momento estou aprendendo sobre HTML, CSS, JavaScript suas tecnologias. <br>
+                <p>Meu nome é Arthur, sou Desenvolvedor "Web Full-Stack", e no momento estou aprendendo sobre HTML, CSS, JavaScript suas tecnologias. <br>
                 Estudo no Cedup Abílio Paulo, estou no 3° ano do Curso Técnico de Informática.
                 </p>
                 <div class="stacks">
@@ -70,16 +70,16 @@
             contribuindo para a melhoria de processos e projetos, além de aperfeiçoar habilidades técnicas e de comunicação.
            </p> 
            <p class="text-white-bg">
-            Entrei para o ramo da programação em 2021, com o início do ensino médio, sempre fui um amante de tecnologia e meu pai também trabalha na área, o 
+            Entrei para o ramo da programação em 2021, com o início do ensino médio, sempre fui um amante de tecnologia. Meu pai também trabalha na área, o 
             que me inspirou e inspira até hoje.
            </p>
            <p class="text-white-bg">
-            Tenho conhecimento aprofundado na utilização do sistema operacional "Windows" e seus aplicativos nativos, além de conhecimento básico com ferramentas de design,
-             como "Photoshop" e "Figma".
+            Tenho conhecimento aprofundado na utilização do sistema operacional Windows e seus aplicativos nativos, além de conhecimento básico com ferramentas de design,
+             como Photoshop e Figma.
             </p>
             <p class="text-white-bg">
-            No curso técnico, tenho conhecimento no desenvolvimento de sistemas com Delphi 10, através da linguagem "Pascal", e utilização do banco de dados "MySQL" além de Programação Orientada a Objetos com Java,
-            uso de ferramentas para testagem de "Softwares" e "WebSites", modelagem de sistemas e uso de metodologias ágeis, como "Jira Software"
+            No curso técnico, tenho conhecimento no desenvolvimento de sistemas com Delphi 10, através da linguagem Pascal, e utilização do banco de dados MySQL além de Programação Orientada a Objetos com Java,
+            uso de ferramentas para testagem de "Softwares" e "WebSites", modelagem de sistemas e uso de metodologias ágeis, como Jira Software
             </p>
             <p class="text-white-bg">
             Na programação "web", tenho conhecimentos avançados em HTML5 e CSS3, e estou obtendo conhecimento sobre a linguagem de programação JavaScript e suas tecnologias.
@@ -95,16 +95,16 @@
         <article>
         <h3><a href="https://github.com/ArthurTeixeiraS/Tui-doList1.2" target="_blank">To-Do List</a></h3>
         <p>Uma página "web" que funciona como uma lista de tarefas, onde você pode anotar suas tarefas e marca-las como concluídas! O destaque desse projeto é o
-            LocalStorage, que permite com que o usuário não perca suas tarefas ao fechar a guia, ou até mesmo o navegador.
+            "LocalStorage", que permite com que o usuário não perca suas tarefas ao fechar a guia, ou até mesmo o navegador.
         </p>
         </article>
         <article>
             <h3><a href="https://github.com/ArthurTeixeiraS/Tu-Calc-Constructor-Function" target="_blank">Calculadora Simples</a></h3>
-        <p>Uma calculadora, feita com o Constructor, que é um método especial para criar e inicializar um objeto através de uma Classe! Pode-se somar, subtrair, multiplicar e dividir, além da possibilidade de usar parênteses para calculos mais complexos</p>
+        <p>Uma calculadora, feita com o "Constructor", que é um método especial para criar e inicializar um objeto através de uma Classe! Pode-se somar, subtrair, multiplicar e dividir, além da possibilidade de usar parênteses para calculos mais complexos</p>
         </article>
         <article>
             <h3><a href="https://github.com/ArthurTeixeiraS/Analista-de-Numeros-JS" target="_blank">Analista de Números</a></h3>
-        <p> Página web, onde o usuário digitará quantos números quiser de 1 a 100, e quando Finalizar, alguns dados como a quantidade de números digitados, o
+        <p> Página "web", onde o usuário digitará quantos números quiser de 1 a 100, e quando Finalizar, alguns dados como a quantidade de números digitados, o
             maior e menor valor, a soma dos valores e a média dos valores adicionados. Tudo isso realizado através da manipulação de Vetores com JavaScript.
         </p>
         </article>
@@ -148,15 +148,15 @@
         <div class="grid">
         <article>
         <h3>Inteligência Emocional</h3>
-        <p>Capacidade de lidar bem com minhas emoções, e usar a energia que elas me proveem para desempenhar melhor minhas tarefas.</p>
+        <p>Capacidade de lidar bem com emoções, e usar a energia que elas proveem para desempenhar melhor minhas tarefas.</p>
         </article>
         <article>
             <h3>Vontade de Aprender</h3>
-        <p>Sou alguém inspirado, que quando tem interesse em algum conteúdo se esforça ao máximo para aprender e dominar de forma eficiente o mesmo.</p>
+        <p>Alguém inspirado, que quando tem interesse em algum conteúdo se esforça ao máximo para aprender e dominar de forma eficiente o mesmo.</p>
         </article>
         <article>
             <h3>Flexibilidade e Resiliência</h3>
-        <p>Relacionada a minha capacidade de me adaptar e continuar produzindo diante de situações complexas, e no final tirar uma lição com tudo.</p>
+        <p>Relacionada a capacidade de adaptar e continuar produzindo diante de situações complexas, e no final tirar uma lição com tudo.</p>
         </article>
         <article>
             <h3>Empatia</h3>
@@ -164,7 +164,7 @@
         </article>
         <article>
             <h3>Pensamento Crítico</h3>
-        <p>Tenho capacidade de questionar métodos, identificar problemas, buscar novas soluções e rever processos, com sabedoria.</p>
+        <p>Capacidade de questionar métodos, identificar problemas, buscar novas soluções e rever processos, com sabedoria.</p>
         </article>
         </div>
     </div>
