Atualizações referentes aos projetos

--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <p>Uma calculadora, feita com o "Constructor", que é um método especial para criar e inicializar um objeto através de uma Classe! Pode-se somar, subtrair, multiplicar e dividir, além da possibilidade de usar parênteses para calculos mais complexos</p>
         </article>
         <article>
-            <h3><a href="https://github.com/ArthurTeixeiraS/Analista-de-Numeros-JS" target="_blank">Analista de Números</a></h3>
-        <p> Página "web", onde o usuário digitará quantos números quiser de 1 a 100, e quando Finalizar, alguns dados como a quantidade de números digitados, o
-            maior e menor valor, a soma dos valores e a média dos valores adicionados. Tudo isso realizado através da manipulação de Vetores com JavaScript.
+            <h3><a href="https://github.com/ArthurTeixeiraS/validaForm" target="_blank">Formulário com Validação</a></h3>
+        <p> Página "web", que contem um formulário com dados como: "Nome", "Sobrenome", "Usuário", "Email", etc... Cada campo contém suas próprias verificações, sendo verificações em 
+            comum, como "Este campo não pode estar em branco" até verificações especificas como invalidez do CPF e igualdade das Senhas
         </p>
         </article>
         </div>
@@ -148,23 +148,23 @@
         <div class="grid">
         <article>
         <h3>Inteligência Emocional</h3>
-        <p>Capacidade de lidar bem com emoções, e usar a energia que elas proveem para desempenhar melhor minhas tarefas.</p>
+        <p>Tenho capacidade de lidar bem com emoções, e usar a energia que elas proveem para desempenhar melhor minhas tarefas.</p>
         </article>
         <article>
             <h3>Vontade de Aprender</h3>
-        <p>Alguém inspirado, que quando tem interesse em algum conteúdo se esforça ao máximo para aprender e dominar de forma eficiente o mesmo.</p>
+        <p>Sou alguém inspirado, que quando se interessa por algum conteúdo, se esforça ao máximo para aprendê-lo e dominá-lo de forma eficiente.</p>
         </article>
         <article>
             <h3>Flexibilidade e Resiliência</h3>
-        <p>Relacionada a capacidade de adaptar e continuar produzindo diante de situações complexas, e no final tirar uma lição com tudo.</p>
+        <p>Está relacionada a capacidade de adaptar e continuar produzindo diante de situações complexas, e no final tirar uma lição com tudo.</p>
         </article>
         <article>
             <h3>Empatia</h3>
-        <p>Relacionado a facilidade de se colocar no lugar do outro, e entender diversas abordagens sobre um determinado assunto.</p>
+        <p>Está relacionado a facilidade de se colocar no lugar do outro, e entender diversas abordagens sobre um determinado assunto.</p>
         </article>
         <article>
             <h3>Pensamento Crítico</h3>
-        <p>Capacidade de questionar métodos, identificar problemas, buscar novas soluções e rever processos, com sabedoria.</p>
+        <p>É a capacidade de questionar métodos, identificar problemas, buscar novas soluções e rever processos, com sabedoria.</p>
         </article>
         </div>
     </div>
